<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginStart="32dp"
        android:text="@string/judul"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/edt_bil1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_judul"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:hint="@string/operan_1"
        android:inputType="numberDecimal"
        android:textCursorDrawable="@null"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white" />

    <TextView
        android:id="@+id/tv_operator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_judul"
        android:layout_toEndOf="@id/edt_bil1"
        android:layout_marginTop="45dp"
        android:layout_marginStart="12dp"
        android:text="@string/hasil"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/edt_bil2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_judul"
        android:layout_toEndOf="@id/tv_operator"
        android:layout_marginTop="32dp"
        android:layout_marginStart="12dp"
        android:hint="@string/operan_2"
        android:inputType="numberDecimal"
        android:textCursorDrawable="@null"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white" />

    <TextView
        android:id="@+id/tv_sama_dengan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_judul"
        android:layout_toEndOf="@id/edt_bil2"
        android:layout_marginTop="45dp"
        android:layout_marginStart="12dp"
        android:text="@string/sama_dengan"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_hasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_judul"
        android:layout_toEndOf="@id/tv_sama_dengan"
        android:layout_marginTop="39dp"
        android:layout_marginStart="15dp"
        android:text="@string/hasil"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_tambah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_bil1"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:text="@string/tambah"
        android:textColor="@color/white"
        android:backgroundTint="#6A6B83" />

    <Button
        android:id="@+id/btn_kurang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_bil1"
        android:layout_marginTop="24dp"
        android:layout_marginStart="135dp"
        android:text="@string/kurang"
        android:textColor="@color/white"
        android:backgroundTint="#6A6B83" />

    <Button
        android:id="@+id/btn_kali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_tambah"
        android:layout_marginTop="10dp"
        android:layout_marginStart="32dp"
        android:text="@string/kali"
        android:textColor="@color/white"
        android:backgroundTint="#6A6B83" />

    <Button
        android:id="@+id/btn_bagi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_kurang"
        android:layout_marginTop="10dp"
        android:layout_marginStart="135dp"
        android:text="@string/bagi"
        android:textColor="@color/white"
        android:backgroundTint="#6A6B83" />
</RelativeLayout>